Web: Fixed layout
Chrome showed scrollbar even when none was necessary

--- a/Web/assets/scss/common.scss
+++ b/Web/assets/scss/common.scss
@@ -91,6 +91,7 @@ header {
       border-collapse: collapse;
       text-align: left;
       width: 100%;
+      overflow: hidden;
    }
 
    td,
