--- a/Web/assets/scss/main.css
+++ b/Web/assets/scss/main.css
@@ -87,6 +87,7 @@ header {
   border-collapse: collapse;
   text-align: left;
   width: 100%;
+  overflow: hidden;
 }
 
 #data td,
